fix img, heading spacing

--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -11,6 +11,7 @@
 
     h2,
     h3 {
+        margin-top: $spacing;
         margin-bottom: $spacing/2;
     }
 
